--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,14 @@ export(counts2PCA)
 export(counts2Venn)
 export(makeBinarySig)
 export(means4heatmap)
+export(modulesByConnectivity)
 export(pipeDESeq2)
 export(pipeLIMMA)
 export(pqHists)
 export(reportPi0)
 export(volcanoPair)
 export(volcanoPlot)
+export(wgcna2igraph)
 importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
 importFrom(qvalue,qvalue)
