--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(pqHists)
 export(reportPi0)
 export(volcanoPair)
 export(volcanoPlot)
+export(wgcna2igraph)
 importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
 importFrom(qvalue,qvalue)
