--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(pipeLIMMA)
 export(pipeTopGO)
 export(pqHists)
 export(reportPi0)
+export(testHeterosis)
 export(volcanoPair)
 export(volcanoPlot)
 export(wgcna2igraph)
